# kancelaria

./: LICENSE  README.md  pyproject.toml
src/kancelaria/: __init__.py  __main__.py  app.py
src/kancelaria.dist-info/: METADATA
src/kancelaria/members/: datastore.py  gui.py  home_gui.py  models.py  table_gui.py
src/kancelaria/resources/: kancelaria.icns
src/tests/: test_kancelaria.py  test_member_datastore.py
